ci/example-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - http:
        paths:
          - path: /nginx/
            backend:
              serviceName: nginx
              servicePort: 80
